[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "cylindra-moire-analysis"
dynamic = ["version"]
description = "Plugin for traditional moire pattern analysis of microtubules"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "impy-array>=2.4.10",
    "numpy>=1.23.0",
    "scipy>=1.11.3",
    "matplotlib>=3.8.1",
    "magic-class>=0.7.20",
    "cylindra>=1.0.3",
]
authors = [
    {name = "Hanjin Liu"},
    {email = "liuhanjin.sc@gmail.com"},
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "cylindra[testing]>=1.0.2",
]

[tool.hatch.version]
path = "cylindra_moire_analysis/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/cylindra_moire_analysis"]
exclude = ["/examples", "/docs", "/tests", "setup.py"]

[tool.hatch.build.targets.wheel]
include = ["/cylindra_moire_analysis"]
exclude = ["/examples", "/docs", "/tests", "setup.py", "/images"]

[tool.hatch.envs.test.scripts]
run = "pytest -v"

[project.entry-points."cylindra.plugin"]
"Moire pattern analysis" = "cylindra_moire_analysis"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--maxfail=5"]
filterwarnings = [
    "ignore::DeprecationWarning:qtpy",
    "ignore::DeprecationWarning:ipykernel",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:qtconsole",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:distutils Version classes are deprecated",
    "ignore:path is deprecated:DeprecationWarning",
    "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.coverage.run]
source = ["cylindra", "cylindra_builtins"]
branch = true
parallel = true

[tool.coverage.paths]
cylindra = ["cylindra/"]
cylindra_builtins = ["cylindra_builtins/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    'if sys.platform == "darwin":',
    'def __repr__(self)',
    "@overload",
    "except ImportError",
    "except ImportError*",
    "except PackageNotFoundError",
    "raise NotImplementedError",
    "pass",
]


[tool.ruff]
target-version = "py310"
line-length = 88
select = [
  "A",
  "ARG",
  "B",
  "C",
  "E",
  "F",
  "I",
  "ICN",
  "ISC",
  "PLC",
  "PLE",
  "PLW",
  "Q",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "A001", "A002", "A003", "ARG001", "ARG002",
  # Allow non-abstract empty methods in abstract base classes
  "B027", "B904", "B006",
  "E501", "E741",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  "RUF001", "PLC1901", "N814", "UP035",
  "T201", "PLW0603", "PLW2901",
]
